--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Blobe Home</title>
   </head>
   <body>
+    <canvas class="threejs"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
